# fusionpose

./: CMakeLists.txt  README.md
docs/: HARDWARE_SETUP.md  OID_README.md  VICON2GT_CALIBRATION.md
env/: environment.yml  environment_flexible.yml
fusionpose_pkg/: .gitignore  CMakeLists.txt  package.xml  setup.py
fusionpose_pkg/config/: cam_config.yaml
fusionpose_pkg/msg/: NodeStatus.msg
fusionpose_pkg/nodes/: base_fusion_node.py  fusion_node.py  imu_acquisition_node.py  marker_tracker_node.py  node.py
fusionpose_pkg/src/files/calibrations/baumer1/: calibration.json
fusionpose_pkg/src/files/calibrations/opencv/: calibration.json
fusionpose_pkg/src/files/camera_settings/: baumer_good_quality.json  baumer_settings.json  opencv_settings.json
fusionpose_pkg/src/files/extrinsics/: baumer1.json
fusionpose_pkg/src/files/gravity_transforms/: baumer1.txt
fusionpose_pkg/src/files/oid_autocalib/: oid_5_autocalibration_baumer1.bag
fusionpose_pkg/src/files/oid_autocalib/vicon2gt/: oid_5_autocalibration_baumer1_vicon2gt_info.txt  oid_5_autocalibration_baumer1_vicon2gt_states.csv
fusionpose_pkg/src/files/oid_files/: oid10_meta.json  oid5_meta.json  oid6_meta.json  oid8_meta.json  oid9_meta.json
fusionpose_pkg/src/files/oid_files/pts/: oid10_pts.json  oid5_pts.json  oid6_pts.json  oid8_pts.json  oid9_pts.json
fusionpose_pkg/src/files/rest/aruco/: generate_aruco_markers_for_printing.py
fusionpose_pkg/src/files/rest/bat_files/: generate_bat_files.py
fusionpose_pkg/src/files/rest/imu_handler/: platformio.ini
fusionpose_pkg/src/files/rest/imu_handler/src/: main.cpp
fusionpose_pkg/src/files/rest/marker_calibrations/sample_oid/: camera_calibration.json  generate_initial_poses.py  initial_poses.json
fusionpose_pkg/src/files/rest/marker_calibrations/sample_oid/calibrated/: calibration_errors.txt  marker_poses_calibrated_normalized.json  observed_points.npy
vicon2gt/: .gitignore  CMakeLists.txt  package.xml
vicon2gt/nodes/: calibration_node.cpp
vicon2gt/src/: BagCalibrator.cpp  BagCalibrator.hpp
vicon2gt/src/gtsam/: GtsamConfig.h  ImuFactorCPIv1.cpp  ImuFactorCPIv1.h  JPLNavState.h  JPLQuaternion.h  MeasBased_ViconPoseTimeoffsetFactor.h  RotationXY.h
vicon2gt/src/meas/: Propagator.cpp
vicon2gt/src/solver/: ViconGraphSolver.cpp  ViconGraphSolver.h
vicon2gt/src/utils/: general.h
vicon2gt/srv/: CalibrateBag.srv
